istio/security/authz/deny/allow-all.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: istio-system
spec:
  action: ALLOW
  rules:
    - {}
